<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_title"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_superior"
        android:text="@string/btn_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClick"/>

    <Button
        android:text="@string/btn_izquierda"
        android:id="@+id/btn_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" />


    <Button
        android:id="@+id/btn_derecha"
        android:text="@string/btn_derecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btn_inferior"
        android:text="@string/btn_inferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"/>

</RelativeLayout>